# ApiCortex

./: .gitignore  DEPENDENCY.md  EngineeringDocument.txt  LICENSE  README.md  docker-compose.yml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: api-testing-image.yml
api-testing/: .dockerignore  Cargo.toml  Dockerfile
api-testing/src/: executor.rs  lib.rs  main.rs  models.rs
api-testing/tests/: integration_test.rs
control-plane/: README.md  requirements.txt
control-plane/app/: main.py
control-plane/app/core/: config.py  middleware.py  security.py
control-plane/app/db/: base.py  session.py
control-plane/app/models/: __init__.py  api.py  contract.py  endpoint.py  feature_flag.py  job.py  membership.py  notification.py  openapi_spec.py  organization.py  organization_ingest_key.py  user.py
control-plane/app/routers/: apis.py  auth.py  contracts.py  dashboard.py  endpoints.py  orgs.py  predictions.py  telemetry.py  testing.py
dbmanage/: README.md  drizzle.timescale.config.ts  package.json
frontend/: middleware.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api-client.ts  api-types.ts  query-provider.tsx
ingest-service/: Dockerfile  README.md  go.mod  go.sum
ml-service/: .env.example  Dockerfile  requirements.txt
ml-service/app/: __init__.py  config.py  main.py
ml-service/workers/: __init__.py  inference_worker.py
scripts/: build-tui-manager.ps1  db-sync.ps1  test_realworld_execution.py
scripts/preview/: app.py  demo_data_5000.csv
scripts/tui-manager/: README.md  config.yml  go.mod  go.sum  main.go
(+77 files in other folders)
