[package]
name = "api-testing"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_testing"
path = "src/lib.rs"

[[bin]]
name = "api-testing"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "deflate", "stream"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
http = "1"
tokio-native-tls = "0.3"
native-tls = "0.2"
url = "2"
socket2 = "0.5"

[dev-dependencies]
axum-test = "15"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
